<resources>
    <string name="app_name">喷嚏精选</string>

    <string name="app_title">喷嚏精选</string>

    <string name="article_title">喷嚏图卦20160901</string>
    <!-- 底部导航和标题 -->
    <string name="title_tugua">图卦</string>
    <string name="title_lehuo">乐活</string>
    <string name="title_yitu">意图</string>
    <string name="title_duanzi">段子</string>

    <!-- 菜单 -->
    <string name="my_collection">我的收藏</string>
    <string name="action_refresh">刷新</string>
    <string name="action_login">登录</string>
    <string name="action_collection">收藏</string>
    <string name="action_setting">设置</string>
    <string name="action_change_theme">切换主题</string>
    <string name="action_share">分享</string>
    <string name="action_about">关于</string>

    <string name="toast_back">再按一次返回桌面</string>

    <string name="app_about">软件声明</string>
    <string name="app_about_info">阅读、发现和分享：8小时外的健康生活！</string>
    <!-- 用户 -->
    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="user_weibo_login">微博账号登录</string>
    <string name="user_no_name">请点击登录</string>
    <string name="user_name">用户名</string>
    <string name="user_signature">用户签名</string>

    <!-- 设置 -->
    <string name="setting_basic">基本设置</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_notify">通知栏提醒</string>
    <string name="setting_advertise">开启评论</string>
    <string name="setting_more">更多</string>
    <string name="setting_cache">清除缓存</string>
    <string name="setting_version">检测更新</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_rank">给我们评分</string>
    <string name="setting_share">分享给朋友</string>

    <!-- 对话框警告 -->
    <string name="dialog_warning">注意</string>
    <string name="dialog_comments_msg">开启评论将会加载页面内的广告，确定开启吗？</string>
    <string name="dialog_cache_msg">清除缓存将会导致离线数据不可用，确定清除吗？</string>

    <!-- 反馈 -->
    <string name="feedback_title">标题</string>
    <string name="feedback_title_hint">请输入问题标题</string>
    <string name="feedback_description">描述</string>
    <string name="feedback_des_hint">请输入问题的详情</string>
    <string name="feedback_submit">提交</string>

    <!-- 收藏 -->
    <string name="favorite_tugua">图卦收藏</string>
    <string name="favorite_lehuo">乐活收藏</string>
    <string name="favorite_yitu">意图收藏</string>
    <string name="favorite_empty">暂时还没有收藏</string>

    <!-- 分享 -->
    <string name="share_to">分享到</string>
    <string name="share_weibo">新浪微博</string>
    <string name="share_weixin">微信好友</string>
    <string name="share_weixin_friend">微信朋友圈</string>
    <string name="share_cancel">取消</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">放开以刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新中</string>
    <string name="pull_to_refresh_tap_label">点击这里刷新</string>
    <string name="pull_to_refresh_last_update">上次更新: 2015年12月10日 22:00</string>
    <!-- 上拉加载 -->
    <string name="pull_to_load_pull_label">上拉加载更多</string>
    <string name="pull_to_load_release_label">放开以加载</string>
    <string name="pull_to_load_refreshing_label">努力加载中</string>
    <string name="pull_to_load_tap_label">点击这里加载更多</string>
    <string name="pull_to_load_last_update">上次加载：2015年12月10日 22:00</string>
    <!-- 右拉刷新 -->
    <string name="pull_to_right_pull_label">右拉刷新</string>
    <string name="pull_to_right_release_label">放开以刷新</string>
    <string name="pull_to_right_refreshing_label">正在刷新中</string>
    <string name="pull_to_right_tap_label">点击这里刷新</string>
    <string name="pull_to_right_last_update">上次更新: 2015年12月10日 22:00</string>
    <!-- 左拉加载 -->
    <string name="pull_to_left_pull_label">右拉加载更多</string>
    <string name="pull_to_left_release_label">放开以加载</string>
    <string name="pull_to_left_refreshing_label">努力加载中</string>
    <string name="pull_to_left_tap_label">点击这里加载更多</string>
    <string name="pull_to_left_last_update">上次加载: 2015年12月10日 22:00</string>
</resources>
