<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>

    <TextView
        android:id="@+id/share_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/share_to"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        android:padding="16dp"/>

    <LinearLayout
        android:id="@+id/share_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/share_weibo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/weibo_photo"
            android:drawablePadding="6dp"
            android:textColor="@color/textColorPrimary"
            android:text="@string/share_weibo"/>
        <TextView
            android:id="@+id/share_weixin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/weixin_photo"
            android:drawablePadding="6dp"
            android:textColor="@color/textColorPrimary"
            android:text="@string/share_weixin"/>
        <TextView
            android:id="@+id/share_weixin_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/weixinfriend_photo"
            android:drawablePadding="6dp"
            android:textColor="@color/textColorPrimary"
            android:text="@string/share_weixin_friend"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>

    <TextView
        android:id="@+id/share_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="@color/textColorPrimary"
        android:text="@string/share_cancel"/>

</LinearLayout>