<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="6dp"
            android:text="@string/setting_basic"
            android:textSize="18sp"
            android:background="@drawable/item_background"/>
        <RelativeLayout
            style="@style/setting_item">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="#c7c7c7"
                android:text="@string/setting_night"/>
            <CheckBox
                android:id="@+id/night_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/setting_item">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="#c7c7c7"
                android:text="@string/setting_advertise"/>
            <CheckBox
                android:id="@+id/advertise_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingBottom="6dp"
            android:text="@string/setting_more"
            android:textSize="18sp"
            android:background="@drawable/item_background"/>
        <RelativeLayout
            android:id="@+id/clear_cache"
            style="@style/setting_item">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="#c7c7c7"
                android:text="@string/setting_cache"/>
            <TextView
                android:id="@+id/cache_cap_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="#c7c7c7"
                android:text="1.0MB"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/check_update"
            style="@style/setting_item">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="#c7c7c7"
                android:text="@string/setting_version"/>
            <TextView
                android:id="@+id/version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="#c7c7c7"
                android:text="2.0.8"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/go_feedback"
            style="@style/setting_item">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="#c7c7c7"
                android:text="@string/setting_feedback"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/go_rank"
            style="@style/setting_item">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="#c7c7c7"
                android:text="@string/setting_rank"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/go_share"
            style="@style/setting_item">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="#c7c7c7"
                android:text="@string/setting_share"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>