<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <FrameLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </FrameLayout>

        <RadioGroup
            android:id="@+id/tab_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_background"
            android:paddingTop="6dp"
            android:paddingBottom="4dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/tab_tugua"
                style="@style/tab_bottom"
                android:checked="true"
                android:drawableTop="@drawable/tugua"
                android:text="@string/title_tugua"
                android:textColor="?attr/global_textColor"/>
            <RadioButton
                android:id="@+id/tab_lehuo"
                style="@style/tab_bottom"
                android:drawableTop="@drawable/lehuo"
                android:text="@string/title_lehuo"
                android:textColor="?attr/global_textColor"/>
            <RadioButton
                android:id="@+id/tab_yitu"
                style="@style/tab_bottom"
                android:drawableTop="@drawable/yitu"
                android:text="@string/title_yitu"
                android:textColor="?attr/global_textColor"/>
            <RadioButton
                android:id="@+id/tab_duanzi"
                style="@style/tab_bottom"
                android:drawableTop="@drawable/duanzi"
                android:text="@string/title_duanzi"
                android:textColor="?attr/global_textColor"/>
        </RadioGroup>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/menu_drawer"
        app:itemIconTint="#ee9a00"
        app:itemTextColor="?attr/global_textColor" />
</android.support.v4.widget.DrawerLayout>


