<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/tab_background"
        android:text="@string/share_to"
        android:textColor="?attr/global_textColor"
        android:textSize="18sp"
        android:padding="16dp"/>

    <LinearLayout
        android:id="@+id/share_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/share_background">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/share_weibo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/weibo_photo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="?attr/global_textColor"
                android:text="@string/share_weibo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/share_weixin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/weixin_photo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="?attr/global_textColor"
                android:text="@string/share_weixin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/share_weixin_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/weixinfriend_photo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="?attr/global_textColor"
                android:text="@string/share_weixin_friend"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/share_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="?attr/global_textColor"
        android:background="?attr/global_background"
        android:text="@string/share_cancel"/>

</LinearLayout>